# jenkins-python-wheel-demo-0515

./: Jenkinsfile  README.md  pyproject.toml  requirements-dev.txt
src/jenkins_python_demo/: app.py
tests/: test_app.py
